# rust-haikunator

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html  params.json
src/: default_adjectives.rs  default_nouns.rs  lib.rs  main.rs
tests/: lib.rs
